--- a/SellingMobileApp.Web/appsettings.json
+++ b/SellingMobileApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SellingMobileApp.Web-296964e4-29e2-4f65-bc2e-f1cd85b8371d;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=KALOYAN\\SQLEXPRESS01;Database=RegularExam10;Integrated Security=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
