--- a/SellingMobileApp.Web/appsettings.json
+++ b/SellingMobileApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KALOYAN\\SQLEXPRESS01;Database=RegularExam10;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Server=KALOYAN\\SQLEXPRESS01;Database=SellingMobileAppWeb;Integrated Security=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
