--- a/SellingMobileApp.Web/SellingMobileApp.Web.csproj
+++ b/SellingMobileApp.Web/SellingMobileApp.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -25,6 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SellingMobileApp.Common\SellingMobileApp.Common.csproj" />
+    <ProjectReference Include="..\SellingMobileApp.Data.Models\SellingMobileApp.Data.Models.csproj" />
     <ProjectReference Include="..\SellingMobileApp.Data\SellingMobileApp.Data.csproj" />
     <ProjectReference Include="..\SellingMobileApp.Web.ViewModels\SellingMobileApp.Web.ViewModels.csproj" />
   </ItemGroup>
