Add all models and run database with changes

--- a/SellingMobileApp.Web/SellingMobileApp.Web.csproj
+++ b/SellingMobileApp.Web/SellingMobileApp.Web.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\SellingMobileApp.Web.ViewModels\SellingMobileApp.Web.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
